igt@gem_exec_schedule@pi-userfault-* - incomplete - INFO: task gem_exec_schedu:\d+ blocked for more than \d+ seconds, Killing the test because the kernel is tainted.
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8059/shard-iclb2/igt@gem_exec_schedule@pi-userfault-render.html#dmesg-warnings41
6> [578.868786] [IGT] gem_exec_schedule: starting subtest pi-userfault-render
<7> [578.869412] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [578.870378] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 2 created
<7> [581.768257] i915 0000:00:02.0: [drm:edp_panel_vdd_off_sync [i915]] Turning [ENCODER:214:DDI A] VDD off
<7> [581.768551] i915 0000:00:02.0: [drm:edp_panel_vdd_off_sync [i915]] PP_STATUS: 0x80000008 PP_CONTROL: 0x00000067
<7> [581.768666] i915 0000:00:02.0: [drm:intel_power_well_disable [i915]] disabling DC off
<7> [581.768784] i915 0000:00:02.0: [drm:skl_enable_dc6 [i915]] Enabling DC6
<7> [581.768897] i915 0000:00:02.0: [drm:gen9_set_dc_state [i915]] Setting DC state from 00 to 02
<3> [662.728130] INFO: task gem_exec_schedu:2673 blocked for more than 61 seconds.
<3> [662.728241] Tainted: G U W 5.6.0-rc4-CI-CI_DRM_8059+ #1
<3> [662.728274] "echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message.
<6> [662.728312] gem_exec_schedu D13256 2673 1093 0x00000000
<4> [662.728322] Call Trace:
<4> [662.728336] ? __schedule+0x2e5/0x800
<4> [662.728344] ? __lock_acquire+0x460/0x15d0
<4> [662.728350] ? wait_for_completion+0x108/0x1a0
<4> [662.728356] schedule+0x37/0xe0
<4> [662.728361] schedule_timeout+0x225/0x3f0
<4> [662.728366] ? find_held_lock+0x2d/0x90
<4> [662.728374] ? mark_held_locks+0x49/0x70
<4> [662.728378] ? _raw_spin_unlock_irq+0x1f/0x40
<4> [662.728384] ? wait_for_completion+0x108/0x1a0
<4> [662.728388] wait_for_completion+0x130/0x1a0
<4> [662.728395] ? wake_up_q+0xa0/0xa0
<4> [662.728404] flush_workqueue+0x198/0x530
<4> [662.728521] ? eb_relocate+0xe9d/0x1270 [i915]
<4> [662.728612] eb_relocate+0xe9d/0x1270 [i915]
<4> [662.728709] i915_gem_do_execbuffer+0x93a/0x2670 [i915]
<4> [662.728730] ? __lock_acquire+0x460/0x15d0
<4> [662.728831] i915_gem_execbuffer2_ioctl+0x123/0x470 [i915]
<4> [662.728928] ? i915_gem_execbuffer_ioctl+0x310/0x310 [i915]
<4> [662.728992] drm_ioctl_kernel+0xad/0xf0
<4> [662.729001] drm_ioctl+0x2e1/0x390
<4> [662.729087] ? i915_gem_execbuffer_ioctl+0x310/0x310 [i915]
<4> [662.729106] ? __fget_files+0xfa/0x1e0
<4> [662.729117] ksys_ioctl+0x7b/0x90
<4> [662.729126] __x64_sys_ioctl+0x11/0x20
<4> [662.729132] do_syscall_64+0x4f/0x220
<4> [662.729140] entry_SYSCALL_64_after_hwframe+0x49/0xbe
<4> [662.729146] RIP: 0033:0x7ff2c4e975d7
<4> [662.729157] Code: Bad RIP value.
<4> [662.729162] RSP: 002b:00007ff2b8f60b88 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [662.729169] RAX: ffffffffffffffda RBX: 00007ffe9e5f5480 RCX: 00007ff2c4e975d7
<4> [662.729173] RDX: 00007ff2b8f60be0 RSI: 0000000040406469 RDI: 0000000000000005
<4> [662.729177] RBP: 00007ff2b8f60be0 R08: 0000000000000000 R09: 0000000000000011
<4> [662.729182] R10: 00000000ffffffef R11: 0000000000000246 R12: 0000000040406469
<4> [662.729186] R13: 0000000000000005 R14: 00007ffe9e5f5480 R15: 00007ffe9e5f4bd0
<4> [662.729204]
````
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8059/shard-iclb2/igt_runner24.txt
Starting subtest: pi-userfault-render
````
[662.327129] Killing the test because the kernel is tainted.
[783.018548] Timeout. Killing the current test with SIGKILL.
[784.020050] Child refuses to die, tainted 0x240. Aborting.
[784.020196] Closing watchdogs
[784.020688] Closing watchdogs`
Edited Mar 05, 2020 by LAKSHMINARAYANA VUDUM